disable UseCompactObjectHeaders profile (#785)